--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@stylistic/eslint-plugin-js": "^2.11.0",
+    "@testomatio/reporter": "^1.6.5",
     "eslint": "^9.15.0",
     "eslint-plugin-playwright": "^2.1.0"
   },
