--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-BASE_URL=https://qauto2.forstudy.space
+BASE_URL=https://qauto.forstudy.space
 TESTOMATIO=tstmt_PaUvMyHGszVH5BKhT-o8uIYi5nG6OC4Ssw1733427676
+USER_EMAIL='zarechpolina+hla@gmail.com'
+USER_PASSWORD='Qwerty123#'
