--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:all": "playwright test --headed",
     "test:chrome": "source .env && playwright test --grep '@no-auth' --project  chrome --headed",
     "test:chrome:auth": "source .env && playwright test --grep '@auth' --project  chrome-auth --headed",
+    "test:chrome:api": "source .env && playwright test --grep '@api' --project  chrome-auth --headed",
     "test:stage:chrome": "cp './env-files/.env.stage' '.env' && source .env && playwright test --project chrome --headed",
     "test:test:chrome": "cp './env-files/.env.test' '.env' && source .env && playwright test --project chrome --headed"
   },
