--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint:fix": "eslint --fix",
     "test:all:headless": "playwright test",
     "test:all": "playwright test --headed",
-    "test:chrome": "source .env && playwright test --grep '@no-auth' --project  chrome --headed",
+    "test:chrome": "source .env && playwright test --grep '@no-auth' --project  chrome",
     "test:chrome:auth": "source .env && playwright test --grep '@auth' --project  chrome-auth --headed",
     "test:chrome:api": "source .env && playwright test --grep '@api' --project  chrome-auth --headed",
     "test:stage:chrome": "cp './env-files/.env.stage' '.env' && source .env && playwright test --project chrome --headed",
-    "test:test:chrome": "cp './env-files/.env.test' '.env' && source .env && playwright test --project chrome --headed"
+    "test:test:chrome": "cp './env-files/.env.test' '.env' && source .env && playwright test --project chrome --headed",
+    "test:chromium": ". .env && playwright test --grep '@no-auth' --project  chromium",
+    "test:chromium:api": ". .env && playwright test --grep '@api' --project  chromium-auth",
+    "test:chromium:auth": ". .env && playwright test --grep '@auth' --project  chromium-auth"
+
+
   },
   "keywords": [],
   "author": "",
