--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,12 +33,17 @@ jobs:
       - name: Install dependecies
         working-directory: .
         run: npm ci
+      - name: Create .env file
+        run: |
+        echo "USER_EMAIL=zarechpolina+hlaqa@gmail.com" > .env
+        echo "USER_PASSWORD=Qwerty123" > .env
+
       - name: Run api tests
         working-directory: .
         run: npm run test:chromium:api
 
-  tests-playwright-e2e:
-    name: "Playwright E2E Tests"
+  tests-playwright-e2e-auth:
+    name: "Playwright E2E Tests Auth"
     needs: lint-playwright
     runs-on: ubuntu-latest
     container:
@@ -51,9 +56,38 @@ jobs:
       - name: Install dependecies
         working-directory: .
         run: npm ci
-      - name: Run e2e tests
+      - name: Create .env file
+        run: |
+        echo "USER_EMAIL=zarechpolina+hlaqa@gmail.com" > .env
+        echo "USER_PASSWORD=Qwerty123" > .env  
+      - name: Run e2e tests auth
         working-directory: .
         run: npm run test:chromium:auth
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: ./playwright-report/
+          retention-days: 30
+          working-directory: .
+
+  tests-playwright-e2e-noauth:
+    name: "Playwright E2E Tests No Auth"
+    needs: lint-playwright
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.49.1-jammy
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependecies
+        working-directory: .
+        run: npm ci
+      - name: Run e2e tests no auth
+        working-directory: .
+        run: npm run test:chromium
       - uses: actions/upload-artifact@v3
         if: always()
         with:
