--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,8 @@ jobs:
         run: npm ci
       - name: Create .env file
         run: |
-          echo "USER_EMAIL=zarechpolina+hlaqa@gmail.com" > .env
+          echo "BASE_URL=https://qauto.forstudy.space" > .env
+          echo "USER_EMAIL=zarechpolina+hlaqa@gmail.com" >> .env
           echo "USER_PASSWORD=Qwerty123" >> .env
       - name: Run api tests
         working-directory: .
@@ -57,7 +58,8 @@ jobs:
         run: npm ci
       - name: Create .env file
         run: |
-          echo "USER_EMAIL=zarechpolina+hlaqa@gmail.com" > .env
+          echo "BASE_URL=https://qauto.forstudy.space" > .env 
+          echo "USER_EMAIL=zarechpolina+hlaqa@gmail.com" >> .env
           echo "USER_PASSWORD=Qwerty123" >> .env
       - name: Run e2e tests auth
         working-directory: .
