--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BASE_URL=https://qauto.forstudy.space
 TESTOMATIO=tstmt_PaUvMyHGszVH5BKhT-o8uIYi5nG6OC4Ssw1733427676
+TESTOMATIO_CREATE=1
 USER_EMAIL=zarechpolina+hlaqa@gmail.com
 USER_PASSWORD=Qwerty123
